SB 8.2.6 & vite-plugin-storybook-nextjs

--- a/web/package.json
+++ b/web/package.json
@@ -18,15 +18,16 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
     "@next/eslint-plugin-next": "14.2.4",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/blocks": "^8.0.8",
-    "@storybook/nextjs": "^8.1.10",
-    "@storybook/preview-api": "^8.1.6",
-    "@storybook/react": "^8.0.8",
-    "@storybook/test": "^8.0.8",
-    "@storybook/test-runner": "^0.19.0",
+    "@storybook/addon-essentials": "^8.2.6",
+    "@storybook/addon-interactions": "^8.2.6",
+    "@storybook/addon-links": "^8.2.6",
+    "@storybook/blocks": "^8.2.6",
+    "@storybook/builder-vite": "^8.2.6",
+    "@storybook/nextjs": "^8.2.6",
+    "@storybook/preview-api": "^8.2.6",
+    "@storybook/react": "^8.2.6",
+    "@storybook/test": "^8.2.6",
+    "@storybook/test-runner": "^0.19.1",
     "@testing-library/react": "16.0.0",
     "@testing-library/user-event": "14.5.2",
     "@types/react": "18.3.3",
@@ -43,13 +44,14 @@
     "http-server": "^14.1.1",
     "lint-staged": "15.2.7",
     "prettier": "3.3.2",
-    "storybook": "^8.1.11",
+    "storybook": "^8.2.6",
     "storybook-addon-apollo-client": "7.3.0",
+    "vite-plugin-storybook-nextjs": "^0.0.2",
     "wait-on": "^7.2.0"
   },
   "engines": {
     "node": "18.x",
-    "npm": "9.x"
+    "npm": "10.x"
   },
   "license": "MIT",
   "main": "index.js",
