Add Storybook Vitest integration

--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@apollo/client": "3.10.8",
+    "@storybook/cli": "^8.3.0-alpha.10",
     "clsx": "1.2.1",
     "cookie": "0.5.0",
     "deepmerge": "4.3.1",
@@ -8,7 +9,7 @@
     "graphql": "16.9.0",
     "graphql-tag": "2.12.6",
     "lodash": "4.17.21",
-    "next": "14.2.4",
+    "next": "14.2.5",
     "prop-types": "15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -18,19 +19,21 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
     "@next/eslint-plugin-next": "14.2.4",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/blocks": "^8.0.8",
-    "@storybook/nextjs": "^8.1.10",
-    "@storybook/preview-api": "^8.1.6",
-    "@storybook/react": "^8.0.8",
-    "@storybook/test": "^8.0.8",
+    "@storybook/addon-essentials": "^8.3.0-alpha.10",
+    "@storybook/addon-interactions": "^8.3.0-alpha.10",
+    "@storybook/addon-links": "^8.3.0-alpha.10",
+    "@storybook/blocks": "^8.3.0-alpha.10",
+    "@storybook/experimental-addon-vitest": "^8.3.0-alpha.10",
+    "@storybook/nextjs": "^8.3.0-alpha.10",
+    "@storybook/preview-api": "^8.3.0-alpha.10",
+    "@storybook/react": "^8.3.0-alpha.10",
+    "@storybook/test": "^8.3.0-alpha.10",
     "@storybook/test-runner": "^0.19.0",
     "@testing-library/react": "16.0.0",
     "@testing-library/user-event": "14.5.2",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@vitest/browser": "^2.0.5",
     "chromatic": "11.5.5",
     "concurrently": "^8.2.2",
     "eslint": "8.43.0",
@@ -42,9 +45,12 @@
     "eslint-plugin-testing-library": "5.11.0",
     "http-server": "^14.1.1",
     "lint-staged": "15.2.7",
+    "playwright": "^1.46.1",
     "prettier": "3.3.2",
-    "storybook": "^8.1.11",
+    "storybook": "^8.3.0-alpha.10",
     "storybook-addon-apollo-client": "7.3.0",
+    "vite-plugin-storybook-nextjs": "^1.0.7",
+    "vitest": "^2.0.5",
     "wait-on": "^7.2.0"
   },
   "engines": {
@@ -62,7 +68,8 @@
     "lint": "eslint .",
     "start": "next start",
     "storybook": "storybook dev -p 6006",
-    "test-storybook": "test-storybook"
+    "test-storybook": "test-storybook",
+    "test": "vitest"
   },
   "version": "1.0.0"
 }
